--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit==1.22.0
-streamlit-option-menu==0.3.0
-easyocr==1.4.1
-pandas==2.1.2
-Pillow>=6.2.0,<8.3.0
-opencv-python==4.7.0.72
-matplotlib==3.8.0
+streamlit
+streamlit-option-menu
+easyocr
+pandas
+Pillow
+opencv-python
+matplotlib
